tests/NormalTests/paczka1/fuzzy1/77373614.err
Error in line 12: sSCEFEr2 S27 80,1
Error in line 30: XAvibP3fX S27 42,2
